# fii-orchestrator

./: .coverage  .gitignore  Makefile  README.md  docker-compose.yml  env.example  fundamental_scores.csv  pyproject.toml  pytest.ini  requirements.txt  test_postgres_debug.py  test_simple_connection.py
data/01_raw/: benchmark-ifix.parquet  benchmark.parquet  dividends.parquet  prices.parquet
data/01_raw/reports_ifix/evolucao_diaria/: ifix-2019.csv  ifix-2020.csv  ifix-2021.csv  ifix-2022.csv  ifix-2023.csv  ifix-2024.csv  ifix-2025.csv
data/01_raw/reports_text/: fii_dfin_text.parquet
data/02_processed/fundamentals/: fundamentals_trimestral.parquet
data/02_processed/market/: macro_data.parquet  macro_data_daily.parquet  macro_data_monthly.parquet
data/metadata/: fiis_metadata.json
infrastructure/database/: README.md
infrastructure/database/init/: 01-init.sql  02-schema.sql  03-external-access.sql
scripts/: backup-postgres.sh  setup-postgres.sh
src/agents/: document_analyzer.py
src/etl/: build_predictive_dataset.py  collect_benchmark.py  collect_fii_data.py  collect_fundamentals.py  collect_ifix.py  collect_macro.py  collect_reports.py
src/etl/processors/: financial_indicators.py
src/fii_orchestrator/: config.py  main.py
src/fii_orchestrator/application/: interfaces.py  use_cases.py
src/fii_orchestrator/application/cqrs/: commands.py
src/fii_orchestrator/application/events/: event_store.py
src/fii_orchestrator/application/sagas/: saga.py
src/fii_orchestrator/domain/: entities.py  value_objects.py
src/fii_orchestrator/etl/: b3_prices.py  b3_prices_refactored.py  cvm_reports.py  cvm_reports_refactored.py  orchestrators.py  reference_funds.py  rss_news.py  rss_news_refactored.py  schemas.py
src/fii_orchestrator/etl/providers/: b3_vendor.py  base.py  yf_provider.py
src/fii_orchestrator/infrastructure/: __init__.py  adapters.py  config.py  di_container.py  logging.py  repositories.py
src/fii_orchestrator/infrastructure/database/: clickhouse_service.py  models.py  postgres_service.py
src/fii_orchestrator/presentation/: api.py  config.py  exceptions.py
src/fii_orchestrator/presentation/middleware/: rate_limit.py
src/fii_orchestrator/presentation/routers/: funds.py  prices.py
src/fii_orchestrator/presentation/schemas/: pagination.py  responses.py
src/fii_orchestrator/serving/: cache_service.py  duckdb_service.py
src/fii_orchestrator/utils/: io.py  parallel.py  retry.py  text.py  validation.py
src/models/: fundamentalist_agent.py
tests/: __init__.py  test_application.py  test_domain.py  test_financial_indicators.py  test_fundamentalist_agent.py
tests/integration/: test_api_integration.py
tests/unit/: test_cache_service.py  test_duckdb_service.py
