[project]
name = "fii-orchestrator"
version = "0.1.0"
description = ""
authors = [
    {name = "Vitoria Sousa",email = "vitoria.sousa@stone.com.br"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feedparser (>=6.0.11,<7.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "polars (>=1.32.2,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "unicode (>=2.9,<3.0)",
    "unidecode (>=1.4.0,<2.0.0)",
    "yfinance (>=0.2.65,<0.3.0)",
    "pandas (>=2.3.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.8"
black = "^25.1.0"
pre-commit = "^4.3.0"

[tool.poetry]
name = "fii-orchestrator"
version = "0.1.0"
description = "Orquestrador de IA multiagente para carteira de FIIs"
readme = "README.md"
# IMPORTANTE: mapear o pacote para a raiz src/
packages = [{ include = "fii_orchestrator", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
# ...demais dependências
